<resources>
    <string name="app_name">My Shopping List</string>
    <string name="_0">0</string>
    <string name="add">Add:</string>
    <string name="addButton">Add</string>
    <string name="title">Title</string>
    <string name="qty">Qty:</string>
    <string name="item_delete">Remove Products</string>
    <string name="this_is_a_product">This is a product</string>
    <string name="qty_product">Qty</string>
    <string name="confirmation">confirmation</string>
    <string name="areYouSure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="share">Share</string>
    <string name="youSure">Are you sure you want to delete all products?</string>
    <string name="dialog_remove_add_title">remove title</string>
    <string name="no_negative_numbers">no negatives</string>
    <string name="end_number_bigger_than_start">bigger than start</string>
    <string name="cancel">cancel</string>
    <string name="add_a_product_to_your_list">Add a product to your list:</string>
    <string name="sort_by">Sort By:</string>
    <string name="enterName">Enter you Name</string>
    <string name="action_settings">Settings</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="stk">Qty:</string>
    <string name="item_edit">edit product</string>
    <string name="edit_your_product_here">Edit your product here:</string>
    <string name="add_changes">Add Changes</string>

    <string-array name="sorting_array">
        <item>Title</item>
        <item>Qty</item>
    </string-array>
</resources>