<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="?attr/colorButtonNormal">


    <TextView
        android:id="@+id/textView_addproductsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:text="@string/add_a_product_to_your_list"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_weight="1"
        android:text="@string/add"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_addproductsTitle" />

    <EditText
        android:id="@+id/editText_title1"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@color/white"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toEndOf="@+id/textView_add"
        app:layout_constraintTop_toTopOf="@+id/textView_add"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_qty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/qty"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView_add"
        app:layout_constraintTop_toBottomOf="@+id/textView_add" />

    <EditText
        android:id="@+id/editText_Number1"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/_0"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_qty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_title1"
        app:layout_constraintTop_toBottomOf="@+id/textView_add"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/add"
        app:layout_constraintEnd_toStartOf="@+id/button_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_qty" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/button_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_add"
        app:layout_constraintTop_toTopOf="@+id/button_add"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>