<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:paddingLeft="40dp"
    android:paddingRight="40dp"
    android:background="@drawable/dialogue_bg">

    <TextView
        android:id="@+id/textView_editproductsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:text="@string/edit_your_product_here"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView_editTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:layout_weight="1"
        android:text="@string/title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_editproductsTitle" />

    <EditText
        android:id="@+id/editText_editTitle"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:paddingLeft="5dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/white"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_editTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toEndOf="@+id/textView_editTitle"
        app:layout_constraintTop_toTopOf="@+id/textView_editTitle"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_editQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/qty"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView_editTitle"
        app:layout_constraintTop_toBottomOf="@+id/textView_editTitle" />

    <EditText
        android:id="@+id/editText_editNumber"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:autofillHints=""
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:paddingLeft="5dp"
        android:hint="@string/_0"
        android:inputType="number"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView_editQty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editText_editTitle"
        app:layout_constraintTop_toBottomOf="@+id/textView_editTitle"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/button_addChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/teal_200"
        android:text="@string/add_changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_cancelChanges"
        app:layout_constraintTop_toBottomOf="@+id/textView_editQty" />

    <Button
        android:id="@+id/button_cancelChanges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginBottom="20dp"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/teal_200"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/button_addChanges"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_addChanges"
        app:layout_constraintTop_toTopOf="@+id/button_addChanges"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>